# FTP-Client

./: .gitignore  ABI_CONTRACT.md  BLUEPRINT.md  CMakeLists.txt
REPORT/: PHASE2_REPORT.md  PHASE_6_REPORT.md  PHASE_7_REPORT.md  Phase-2.md  Phase-4-Completion-Report.md  Phase-5-Completion-Report.md  phase-1.md  phase-3.md
SPEC/: Phase-1.md  Phase-3.md  Phase-4.md  Phase-5.md  Phase-7.md  RELEASE.md
include/: ftpclient.h
python/: build_ffi.py  pyproject.toml
python/ftpclient/: __init__.py  __init__.pyi  _async.py  _core.py  client.py  exceptions.py  types.py  utils.py
python/ftpclient.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/tests/: test_callback_integrity.py  test_exceptions.py  test_gil_release.py  test_types.py  test_wheel.py
src/: FtpClientImpl.hpp  ftpclient.cpp
src/observability/: Telemetry.cpp  Telemetry.hpp
src/platform/: ZeroCopyTransport.cpp  ZeroCopyTransport.hpp
src/protocol/: ControlThread.hpp  DataChannel.hpp  DirectoryWalker.hpp  ErrorMap.hpp  PlainTransport.cpp  PlainTransport.hpp  ProtocolEngine.hpp  ReplyParser.hpp  StateMachine.hpp  Transport.hpp
src/resilience/: CircuitBreaker.cpp  CircuitBreaker.hpp  IdempotencyClassifier.cpp  IdempotencyClassifier.hpp  ResilienceController.cpp  ResilienceController.hpp  RetryPolicy.cpp  RetryPolicy.hpp  StallDetector.cpp  StallDetector.hpp
src/security/: CredentialVault.cpp  CredentialVault.hpp  OpenSSLInit.cpp  OpenSSLInit.hpp  SecretProvider.cpp  SecretProvider.hpp  SecureAllocator.hpp  TlsConfig.hpp  TlsTransport.cpp  TlsTransport.hpp
src/transfer/: BufferPool.cpp  BufferPool.hpp  ModeZCompressor.cpp  ModeZCompressor.hpp  ResultAggregator.cpp  ResultAggregator.hpp  Task.hpp  ThreadPool.cpp  ThreadPool.hpp  TokenBucket.cpp  TokenBucket.hpp  TransferEngine.cpp  TransferEngine.hpp
tests/: abi_test.c  abi_test.py  header_purity_test.c  phase2_test.cpp  phase5_test.cpp
